--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/png" href="48.png"/>
-    <title>Readable Example</title>
+    <title>Readable- Custom Font Replacer for Screen Readers</title>
   </head>
   <body>
       <img src="48.png" alt="Readable logo (which depicts a pair of reading glasses)"><h1>Readable- Custom Font Replacer for Screen Readers</h1>
