--- a/public/index.html
+++ b/public/index.html
@@ -10,10 +10,15 @@
       <img src="48.png" alt="Readable logo (which depicts a pair of reading glasses)"><h1>Readable- Custom Font Replacer for Screen Readers</h1>
       <h2>Readable is a Web Extension that converts "custom font" text on webpages to standard characters, which can be read as intended by screen readers.</h2>
       <h3>Installation</h3>
+      <h4>Browser Extension</h4>
       <p>
         The extension is undergoing review in the Chrome Web Store, the Mozilla add-ons distribution site, and the macOS App Store.<br />
         The <a href="https://github.com/david-shortman/readable">source code</a> can be downloaded and then <a href="https://webkul.com/blog/how-to-install-the-unpacked-extension-in-chrome/">imported as an unpacked extension into Chrome</a>.
         </p>
+      <h4>iOS Shortcut</h4>
+      <p>
+        This iOS Shortcut can be used in Safari to convert a webpage's text to a readable format: [Install](https://www.icloud.com/shortcuts/a00e6a90295a4f1e8f03d8e907e8c044).
+      </p>
       <h3>Example</h3>
       <p>The following text will be readable by a screen reader when the Readable extension is enabled:</p>
       <p>ƈơŋɠཞąɬųƖąɬıơŋʂ! ɬɧıʂ ɬɛҳɬ ɧąʂ ცɛɛŋ ɱąɖɛ ƈơɱ℘ąɬıცƖɛ ʄơཞ ʂƈཞɛɛŋ ཞɛąɖɛཞʂ ცყ ཞɛąɖąცƖɛ.</p>
