--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
         </p>
       <h4>iOS Shortcut</h4>
       <p>
-        This iOS Shortcut can be used in Safari to convert a webpage's text to a readable format: <a href="https://www.icloud.com/shortcuts/a00e6a90295a4f1e8f03d8e907e8c044).">Install</a>.
+        This iOS Shortcut can be used in Safari to convert a webpage's text to a readable format: <a href="https://www.icloud.com/shortcuts/a535ff5c34d24c338f1984ce295295f7">Install</a>.
       </p>
       <h3>Example</h3>
       <p>The following text will be readable by a screen reader when the Readable extension is enabled:</p>
