--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,11 @@
       <h2>Readable is a Web Extension that converts "custom font" text on webpages to standard characters, which can be read as intended by screen readers.</h2>
       <h3>Installation</h3>
       <h4>Browser Extension</h4>
+      <ul>
+        <li><a href="https://addons.mozilla.org/en-US/firefox/addon/readable/">Readable for Firefox</a></li>
+      </ul>
       <p>
-        The extension is undergoing review in the Chrome Web Store, the Mozilla add-ons distribution site, and the macOS App Store.<br />
+        The extension is undergoing review in the Chrome Web Store and the macOS App Store.<br />
         The <a href="https://github.com/david-shortman/readable">source code</a> can be downloaded and then <a href="https://webkul.com/blog/how-to-install-the-unpacked-extension-in-chrome/">imported as an unpacked extension into Chrome</a>.
         </p>
       <h4>iOS Shortcut</h4>
