updates from lighthouse recommendation

--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Learn about Readable, a browser extension that makes social media posts with custom font readable by screen readers.">
     <link rel="icon" type="image/png" href="48.png"/>
     <title>Readable- Custom Font Replacer for Screen Readers</title>
   </head>
