--- a/public/index.html
+++ b/public/index.html
@@ -14,10 +14,10 @@
       <h4>Browser Extension</h4>
       <ul>
         <li><a href="https://addons.mozilla.org/en-US/firefox/addon/readable/">Readable for Firefox</a></li>
+        <li><a href="https://chrome.google.com/webstore/detail/readable/bmefgaahlikpnkoojlehnggcicppiaaf">Readable for Google Chrome</a><li>
       </ul>
       <p>
-        The extension is undergoing review in the Chrome Web Store and the macOS App Store.<br />
-        The <a href="https://github.com/david-shortman/readable">source code</a> can be downloaded and then <a href="https://webkul.com/blog/how-to-install-the-unpacked-extension-in-chrome/">imported as an unpacked extension into Chrome</a>.
+        The extension is undergoing review in the macOS App Store.<br />
         </p>
       <h4>iOS Shortcut</h4>
       <p>
