--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
       <h4>Browser Extension</h4>
       <ul>
         <li><a href="https://addons.mozilla.org/en-US/firefox/addon/readable/">Readable for Firefox</a></li>
-        <li><a href="https://chrome.google.com/webstore/detail/readable/bmefgaahlikpnkoojlehnggcicppiaaf">Readable for Google Chrome</a><li>
+        <li><a href="https://chrome.google.com/webstore/detail/readable/bmefgaahlikpnkoojlehnggcicppiaaf">Readable for Google Chrome</a></li>
       </ul>
       <p>
         The extension is undergoing review in the macOS App Store.<br />
